MediaPipe marche mais l'objet qui m'est retourné ne m'indique pas l'angle de la tête

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   </head>
   <body>
     <div id="app">
-      <span class="mdc-button__label" id="webcamButton">ENABLE WEBCAM</span>
-      <div id="liveView"></div>
-
+      <div class="square"></div>
+      <img src="public/images/trump.webp" id="imageTest" alt="" />
       <video id="webcam" autoplay playsinline></video>
     </div>
     <script type="module" src="/main.js"></script>
