--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="square"></div>
+      <div class="square" id="square"></div>
       <img src="public/images/trump.webp" id="imageTest" alt="" />
       <video id="webcam" autoplay playsinline></video>
     </div>
