BEFORE TRY CHECK

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <button id="startCameraButton">Activer la caméra</button>
       </div>
       <div class="process_video">
+        <img id="matchedImage" class="image_output" />
+
         <video class="input_video"></video>
         <canvas class="output_canvas"></canvas>
       </div>
