--- a/client/index.html
+++ b/client/index.html
@@ -13,15 +13,43 @@
     <div class="container">
       <div class="intro" id="intro">
         <div class="intro_content">
-          <button id="startButton">Skip Intro</button>
+          <div class="intro_part" id="intro_part_1">
+            <h1 class="intro_part_title">SELFIES</h1>
+          </div>
+
+          <div class="intro_part" id="intro_part_2">
+            <p class="intro_part_number">1/3</p>
+            <p class="intro_part_text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quos.
+            </p>
+          </div>
+          <div class="intro_part" id="intro_part_3">
+            <p class="intro_part_number">2/3</p>
+            <p class="intro_part_text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quos.
+            </p>
+          </div>
+          <div class="intro_part" id="intro_part_4">
+            <p class="intro_part_number">3/3</p>
+            <p class="intro_part_text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              quos.
+            </p>
+          </div>
+          <div class="intro_buttons">
+            <button class="intro_button" id="previousButton">Previous</button>
+            <button class="intro_button" id="startButton">Skip Intro</button>
+            <button class="intro_button" id="nextButton">Next</button>
+          </div>
         </div>
       </div>
 
       <div class="header">
         <div class="header__content">
           <div class="content__logo">
-            <h1 id="headerTitle">Selfy</h1>
-            <h1 id="headerTitle">s</h1>
+            <h1 id="headerTitle">SELFIES</h1>
           </div>
         </div>
       </div>
