--- a/client/index.html
+++ b/client/index.html
@@ -17,30 +17,24 @@
             <h1>ENTER</h1>
           </div>
           <div class="intro_part" id="intro_part_1">
-            <h1 class="intro_part_title" id="intro-part-title">SELFIES</h1>
+            <h1 class="intro_part_title" id="intro-part-title">
+              Infinite Poses
+            </h1>
           </div>
 
           <div class="intro_part" id="intro_part_2">
-            <p class="intro_part_number">1/3</p>
-            <p class="intro_part_text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quos.
-            </p>
+            <div class="intro_part_decription">
+              <p class="intro_part_text">
+                Infinite Poses explore l'infinité des gestes possibles lors de
+                la prise de selfies, en associant les poses de l'utilisateur
+                avec des selfies existants.
+              </p>
+            </div>
+            <div class="intro_part_gallery">
+              <img src="" alt="" id="introImg1" />
+            </div>
           </div>
-          <div class="intro_part" id="intro_part_3">
-            <p class="intro_part_number">2/3</p>
-            <p class="intro_part_text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quos.
-            </p>
-          </div>
-          <div class="intro_part" id="intro_part_4">
-            <p class="intro_part_number">3/3</p>
-            <p class="intro_part_text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quos.
-            </p>
-          </div>
+
           <div class="intro_buttons">
             <button class="intro_button" id="previousButton">Previous</button>
             <button class="intro_button" id="startButton">Skip Intro</button>
@@ -51,8 +45,8 @@
 
       <div class="header">
         <div class="header__content">
-          <div class="content__logo">
-            <h1 id="headerTitle">SELFIES</h1>
+          <div class="content__logo" id="contentLogo">
+            <h1 id="headerTitle">INFINITE POSES</h1>
           </div>
         </div>
       </div>
